working on landing page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
+
 @import "partials/base";
 @import "partials/nav";
+@import "partials/home";
