--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -1,6 +1,6 @@
 .home {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #2e2e2e;
 
   &__background {
@@ -10,5 +10,14 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    z-index: 1;
+  }
+
+  &__overlay {
+    background-color: $primary;
+    opacity: 0.75;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
   }
 }
