added hero section

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,6 +1,8 @@
 .footer {
+  display: block;
+
   &__container {
-    background-color: #101522;
+    background-color: $third;
   }
 
   &__wrapper {
