working on discography section of site

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,4 +5,5 @@
 @import "partials/home";
 @import "partials/hero";
 @import "partials/about";
+@import "partials/discography";
 @import "partials/footer";
