footer and about styling updates

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -11,6 +11,7 @@ $accent: #7b0d1e;
 $altBg: #faf9f6;
 
 $font: "Cairo", sans-serif;
+$box-shadow: 10px 10px 43px 0px rgba(0, 0, 0, 0.39);
 
 html {
   scroll-behavior: smooth;
