--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,9 +1,5 @@
 .footer {
-  display: block;
-
-  &__container {
-    background-color: $third;
-  }
+  background-color: $third;
 
   &__wrapper {
     padding: 48px 24px;
@@ -11,12 +7,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 1100px;
-    margin: 0 auto;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__socialMedia {
-    max-width: 1000px;
+    max-width: 900px;
     width: 100%;
   }
 
@@ -24,7 +21,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1100px;
+    max-width: 1000px;
     margin: 40px auto 0 auto;
 
     @media screen and (max-width: 820px) {
@@ -43,11 +40,19 @@
     margin-bottom: 16px;
     font-weight: bold;
     text-transform: uppercase;
+    flex-direction: column;
+  }
+
+  &__logoH1 {
+    letter-spacing: 4px;
   }
 
   &__rights {
     color: $secondary;
     margin-bottom: 16px;
+    font-size: 13px;
+    font-weight: normal;
+    margin-top: 5px;
   }
 
   &__socialIcons {
