made spotify iframe responsive

--- a/src/sass/partials/_discography.scss
+++ b/src/sass/partials/_discography.scss
@@ -7,16 +7,35 @@
     display: flex;
     justify-content: center;
     padding-top: 250px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__spotifyWrapper {
     padding-top: 150px;
     text-align: center;
     max-width: 1000px;
+    margin: 0 auto;
   }
 
   &__spotify {
-    display: block;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 900px;
+    height: 500px;
+    padding: 1rem;
+
+    @media screen and(max-width: 960px) {
+      width: 700px;
+    }
+
+    @media screen and(max-width: 768px) {
+      width: 500px;
+    }
+    @media screen and(max-width: 500px) {
+      width: 300px;
+    }
   }
 }
