--- a/src/sass/partials/_discography.scss
+++ b/src/sass/partials/_discography.scss
@@ -1,21 +1,33 @@
 .discography {
   background-color: $primary;
-  height: 100vh;
+  padding: 0 24px;
+  justify-content: center;
+  height: 864px;
 
   &__wrapper {
     max-width: 1200px;
     display: flex;
     justify-content: center;
-    padding-top: 250px;
+
     align-items: center;
     margin-left: auto;
     margin-right: auto;
   }
 
+  &__titleWrapper {
+    max-width: 1100px;
+    padding: 1rem;
+    text-align: left;
+  }
+
+  &__title {
+    color: $secondary;
+    text-align: left;
+  }
+
   &__spotifyWrapper {
-    padding-top: 150px;
     text-align: center;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
   }
 
@@ -23,9 +35,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 900px;
+    width: 1000px;
     height: 500px;
-    padding: 1rem;
+
+    @media screen and(max-width: 1079px) {
+      width: 900px;
+    }
 
     @media screen and(max-width: 960px) {
       width: 700px;
@@ -34,7 +49,7 @@
     @media screen and(max-width: 768px) {
       width: 500px;
     }
-    @media screen and(max-width: 500px) {
+    @media screen and(max-width: 480px) {
       width: 300px;
     }
   }
