--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,5 +5,6 @@
 @import "partials/home";
 @import "partials/hero";
 @import "partials/about";
+@import "partials/releases";
 @import "partials/discography";
 @import "partials/footer";
