--- a/src/sass/partials/_discography.scss
+++ b/src/sass/partials/_discography.scss
@@ -144,10 +144,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 45px;
 
     @media screen and (max-width: 1200px) {
       width: 1060px;
       height: 400px;
+      padding: 0;
     }
 
     @media screen and (max-width: 1100px) {
